web/css/site.css
html,
body {
    height: 100%;
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
}

.wrap > .container {
    padding: 70px 15px 20px;
}

.footer {
    height: 60px;
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    padding-top: 20px;
}

.jumbotron {
    text-align: center;
    background-color: transparent;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

.not-set {
    color: #c55;
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
    content: /*"\e113"*/ "\e151";
}

a.desc:after {
    content: /*"\e114"*/ "\e152";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view th {
    white-space: nowrap;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #a94442;
    background: #fdf7f7;
    border-left: 3px solid #eed3d7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

/* align the logout "link" (button in form) of the navbar */
.nav li > form > button.logout {
    padding: 15px;
    border: none;
}

@media(max-width:767px) {
    .nav li > form > button.logout {
        display:block;
        text-align: left;
        width: 100%;
        padding: 10px 15px;
    }
}

.nav > li > form > button.logout:focus,
.nav > li > form > button.logout:hover {
    text-decoration: none;
}

.nav > li > form > button.logout:focus {
    outline: none;
}


/* Blue NavBar */
/*
.navbar-inverse {
    background-color: #09427b;  / * blue * /
    border-color: #07315c;      / * dark blue * /
    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#0c5bab), to(#09427b));
    background-image: -webkit-linear-gradient(top, #0c5bab, 0%, #09427b, 100%);
    background-image: -moz-linear-gradient(top, #0c5bab 0%, #09427b 100%);
    background-image: linear-gradient(to bottom, #0c5bab 0%, #09427b 100%);
    background-repeat: repeat-x;
}
*/

/* DarkGray NavBar */
.navbar-inverse {
    background-color: #808080;  /* gray */
    border-color: #606060;      /* dark gray */
    border-color: transparent;
    /*
    background-image: -webkit-gradient(linear, left 0%, left 100%, from(#AAAAAA), to(#687077));
    background-image: -webkit-linear-gradient(top, #AAAAAA, 0%, #687077, 100%);
    background-image: -moz-linear-gradient(top, #AAAAAA 0%, #687077 100%);
    background-image: linear-gradient(to bottom, #AAAAAA 0%, #687077 100%);
    background-repeat: repeat-x;
    */
}

.navbar .nav > li > a, .navbar .nav > li > a:visited {
    color: #fff;
    text-decoration: none;
}
.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
    color: black; /* #9d9d9d; */
}
.navbar {
    border-radius: 0px; /* default 4px; */
    background-color: #546351;  /* dark green */
    border-color: #546351;      /* dark green */
}
.navbar-inverse .navbar-brand {
    color: #fff;
    text-decoration: none;
}

/* 
.media-body {
    width: 10000px;
}
*/

